fix: scrollbar for last item .
git-svn-id: https://win-lhoa5a3q3i7/svn/front-end-backup/trunk@4867 3f25d8b1-e65f-8d48-bd54-75b34d8be7f1

--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -123,3 +123,6 @@ div.copied {
   margin-left: -100px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
+.main-sidebar-content {
+  padding-bottom: 46px;
+}
